# esp32s3_serialweb

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/trombik__esp_wireguard/: CMakeLists.txt
components/trombik__esp_wireguard/src/: wireguard-platform.c  wireguardif.c
main/: CMakeLists.txt  config.c  config.h  eth_w5500.c  eth_w5500.h  idf_component.yml  main.c  web_terminal.html  wg_client.c  wg_client.h
